--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,22 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     set(CMAKE_C_FLAGS_RELEASE "-O2")
     set(CMAKE_ASM_NASM_FLAGS "-DWIN64")
     set(CMAKE_ASM_NASM_FLAGS_DEBUG "")
+    if (MSVC)
+        set(CMAKE_C_FLAGS " /GS /sdl ")
+        set(CMAKE_CXX_FLAGS " /GS /sdl ")
+        set(CMAKE_EXE_LINKER_FLAGS " /NXCompat /DynamicBase ")
+        set(CMAKE_SHARED_LINKER_FLAGS " /NXCompat /DynamicBase ")
+    endif()
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+
+if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-protector-strong -fPIE -fPIC -D_FORTIFY_SOURCE=2 -O2 -flto -Wall -Wextra -Wformat -Wformat-security -fvisibility=hidden -march=native")
+    if(CMAKE_SYSTEM_NAME STREQUAL "Windows") #for Mingw64 support, see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=65782
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-asynchronous-unwind-tables")
+    endif()
+    set(CMAKE_C_FLAGS_RELEASE "-O2")
+    set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
+endif(${CMAKE_C_COMPILER_ID} STREQUAL "GNU")
 
 include(CTest)
 
